--- a/_data/data.yml
+++ b/_data/data.yml
@@ -200,29 +200,19 @@ certifications:
 projects:
     title: Projects
     intro: >
-      You can list your side projects in this
-      section. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-      Vestibulum et ligula in nunc bibendum fringilla a eu lectus.
+      Here is some of projects
     assignments:
-      - title: Velocity
-        link: "#hook"
-        tagline: "A responsive website template designed to help startups promote, market and sell their products."
+      - title: Head Talks
+        link: "https://www.unith.ai/"
+        tagline: "API Backend and infrastructure for Head Talks"
 
-      - title: DevStudio
-        link: "#"
-        tagline: "A responsive website template designed to help web developers/designers market their services."
+      - title: Paxful Pay
+        link: "https://paxful.com/paxful-pay"
+        tagline: "Paxful Pay for third-party integration"
 
-      - title: Tempo
-        link: "#"
-        tagline: "A responsive website template designed to help startups promote their products or services and to attract users &amp; investors"
-
-      - title: Atom
-        link: "#"
-        tagline: "A comprehensive website template solution for startups/developers to market their mobile apps."
-
-      - title: Delta
-        link: "#"
-        tagline: "A responsive Bootstrap one page theme designed to help app developers promote their mobile apps"
+      - title: Food service Fuy
+        link: "https://apps.apple.com/ro/app/fudy-kitchen/id1612970174"
+        tagline: "Implement food service and payment logic"
 
 #oss:
 #    title: OSS Contributions
