--- a/_data/data.yml
+++ b/_data/data.yml
@@ -267,7 +267,7 @@ skills:
       - name: Javascript & TS
         level: 98%
 
-      - name: RectJS
+      - name: ReactJS, NextJS
         level: 70%
 
       - name: AWS & Terraform & Cloud solutions
