--- a/_data/data.yml
+++ b/_data/data.yml
@@ -209,7 +209,7 @@ certifications:
           end: 18 Oct 2025
           organization: Hackerrank
           credentialid: 4c6332ccfef1
-          credentialurl: https://www.hackerrank.com/certificates/4c6332ccfef1
+          credentialurl: hackerrank.com/certificates/4c6332ccfef1
           credentialname: JavaScript (Basic) Certificate
           details: |
             It covers topics like, Functions, Currying, Hoisting, Scope, Inheritance, Events and Error Handling.
