--- a/antora-playbook.yml
+++ b/antora-playbook.yml
@@ -2,11 +2,19 @@ site:
   title: Roman Dobrynin — CV
   url: https://rdobrynin.github.io
   start_page: cv::index.adoc
+  keys:
+    page-pagination: false
+
+urls:
+  redirect-facility: static
 
 content:
   sources:
     - url: .
       branches: HEAD
+      exclude:
+        - README.adoc
+        - README.md
 
 ui:
   bundle:
