--- a/antora-playbook-local.yml
+++ b/antora-playbook-local.yml
@@ -3,10 +3,16 @@ site:
   url: https://rdobrynin.github.io
   start_page: cv::index.adoc
 
+urls:
+  redirect-facility: static
+
 content:
   sources:
     - url: .
       branches: HEAD
+      exclude:
+        - README.adoc
+        - README.md
 
 ui:
   bundle:
